# PlayStore-Fraud-Detection

./: .gitignore  README.md  assign.md  main.py  pyproject.toml  requirements.txt
data/input/: input.json
data/output/: analysis_results.json  fraud_analysis_results.json
docs/: README.md  api_docs.md  api_documentation.md  architecture.md  development_guide.md  getting_started.md  index.md  installation.md  metrics.md  modules.md  requirements.txt  samples.md  usage.md  user_guide.md
src/playstore_fraud/: __init__.py  detector.py
src/playstore_fraud/analysis/: app_analyzer.py  llm_analyzer.py
src/playstore_fraud/api/: playstore_client.py
src/playstore_fraud/config/: logging_config.py
src/playstore_fraud/utils/: cli_utils.py  io_utils.py  metrics.py
tests/: test_detector.py
